# cf-error-corpus

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  SECURITY.md  pixi.toml  pyproject.toml
.github/workflows/: build.yml  ci.yml  copilot-setup-steps.yml  scorecard.yml
cf_error_corpus/: cli.py  validate.py
corpus/checksum-mismatch/nomad-52-linux_aarch64/: input.yml
corpus/cpp/pdftopng-34-20260212.1-linux_64_python3.10.____cpython/: input.yml
corpus/cpp/pdftopng-34-20260212.1-osx_64_python3.10.____cpython/: input.yml
tests/: test_cli.py  test_core.py  test_validate.py
